--- a/.env
+++ b/.env
@@ -1,9 +1,11 @@
 MESSAGE_CONTAINER_XPATH = //div[@class='x78zum5 xdt5ytf x1iyjqo2 x2lah0s xl56j7k x121v3j4']/div/div[@class='x78zum5 xdt5ytf']
-MESSAGE_XPATH = //div[@class="html-div xexx8yu x4uap5 x18d9i69 xkhd6sd x1gslohp x11i5rnm x12nagc x1mh8g0r x1yc453h x126k92a x18lvrbx"]
-MESSAGE_TIME = //div[@class="xzpqnlu x1hyvwdk xqtp20y x6ikm8r x10wlt62 xnalus7"]
-SENDER_XPATH = //div[@class="html-div x11i5rnm xat24cr x1mh8g0r xexx8yu x4uap5 x78zum5 x1anpbxc x10b6aqq x1ye3gou x1nhvcw1"]
-SENDER_XPATH2 = //span[@class="x1aimgj9"]
-MESSAGE_XPATH2 = //div[@class="html-div xexx8yu x4uap5 x18d9i69 xkhd6sd x1gslohp x11i5rnm x12nagc x1mh8g0r x1yc453h x126k92a xyk4ms5"]
+MESSAGE_XPATH = .//div[@class='html-div xexx8yu x4uap5 x18d9i69 xkhd6sd x1gslohp x11i5rnm x12nagc x1mh8g0r x1yc453h x126k92a x18lvrbx']
+MESSAGE_TIME = .//div[@class='xzpqnlu x1hyvwdk xqtp20y x6ikm8r x10wlt62 xnalus7']
+SENDER_XPATH = .//span[@class='html-span xdj266r x11i5rnm xat24cr x1mh8g0r xexx8yu x4uap5 x18d9i69 xkhd6sd x1hl2dhg x16tdsg8 x1vvkbs x186z157']/span[@class='html-span xdj266r x11i5rnm xat24cr x1mh8g0r xexx8yu x4uap5 x18d9i69 xkhd6sd x1hl2dhg x16tdsg8 x1vvkbs']
+SENDER_XPATH2 = .//span[@class='html-span xdj266r x11i5rnm xat24cr x1mh8g0r xexx8yu x4uap5 x18d9i69 xkhd6sd x1hl2dhg x16tdsg8 x1vvkbs xzpqnlu x1hyvwdk xjm9jq1 x6ikm8r x10wlt62 x10l6tqk x1i1rx1s']
+MESSAGE_XPATH2 = .//div[@class='html-div xexx8yu x4uap5 x18d9i69 xkhd6sd x1gslohp x11i5rnm x12nagc x1mh8g0r x1yc453h x126k92a xyk4ms5']
+
+TOOLTIP_XPATH = //div[@role='tooltip']//div[string-length(normalize-space()) > 0]
 
 USERNAME = 01730805675
 PASSWORD = Test@1234
