--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
+LOADING_XPATH = //img[@draggable='false']
+
+
 CHANNEL_TITLE = //span[@class='html-span xdj266r x11i5rnm xat24cr x1mh8g0r xexx8yu x4uap5 x18d9i69 xkhd6sd x1hl2dhg x16tdsg8 x1vvkbs xxymvpz x1dyh7pn']
 CHANNEL_SUB_TITLE = //span[@class='html-span xdj266r x11i5rnm xat24cr x1mh8g0r xexx8yu x4uap5 x18d9i69 xkhd6sd x1hl2dhg x16tdsg8 x1vvkbs xxymvpz x1dyh7pn']
 
@@ -6,7 +9,7 @@ MESSAGE_XPATH = .//div[@class='html-div xexx8yu x4uap5 x18d9i69 xkhd6sd x1gslohp
 IMAGE_PATH = .//div[@class='html-div xdj266r x11i5rnm xat24cr x1mh8g0r xexx8yu x4uap5 x18d9i69 xkhd6sd xeuugli x1vjfegm']//img
 MESSAGE_TIME = .//div[@class='xzpqnlu x1hyvwdk xqtp20y x6ikm8r x10wlt62 xnalus7']
 SENDER_XPATH = .//span[@class='html-span xdj266r x11i5rnm xat24cr x1mh8g0r xexx8yu x4uap5 x18d9i69 xkhd6sd x1hl2dhg x16tdsg8 x1vvkbs x186z157']/span[@class='html-span xdj266r x11i5rnm xat24cr x1mh8g0r xexx8yu x4uap5 x18d9i69 xkhd6sd x1hl2dhg x16tdsg8 x1vvkbs']
-
+USER_PROFILE_PIC_XPATH = .//img[@class='x1rg5ohu x5yr21d xl1xv1r xh8yej3']
 
 SENDER_XPATH2 = .//span[@class='html-span xdj266r x11i5rnm xat24cr x1mh8g0r xexx8yu x4uap5 x18d9i69 xkhd6sd x1hl2dhg x16tdsg8 x1vvkbs xzpqnlu x1hyvwdk xjm9jq1 x6ikm8r x10wlt62 x10l6tqk x1i1rx1s']
 MESSAGE_XPATH2 = .//div[@class='html-div xexx8yu x4uap5 x18d9i69 xkhd6sd x1gslohp x11i5rnm x12nagc x1mh8g0r x1yc453h x126k92a xyk4ms5']
