--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 LOADING_XPATH = //img[@draggable='false']
 DOWN_ARROW_XPATH = //div[@class='x1ey2m1c xds687c x17qophe xg01cxk x47corl x10l6tqk x13vifvy x1ebt8du x19991ni x1dhq9h x1o1ewxj x3x9cwd x1e5q0jg x13rtm0m']
 
-CHANNEL_TITLE = //span[@class='html-span xdj266r x11i5rnm xat24cr x1mh8g0r xexx8yu x4uap5 x18d9i69 xkhd6sd x1hl2dhg x16tdsg8 x1vvkbs xxymvpz x1dyh7pn']
-CHANNEL_SUB_TITLE = //span[@class='html-span xdj266r x11i5rnm xat24cr x1mh8g0r xexx8yu x4uap5 x18d9i69 xkhd6sd x1hl2dhg x16tdsg8 x1vvkbs xxymvpz x1dyh7pn']
+CHAT_INFO_TITLE_XPATH = //span[@class='html-span xdj266r x11i5rnm xat24cr x1mh8g0r xexx8yu x4uap5 x18d9i69 xkhd6sd x1hl2dhg x16tdsg8 x1vvkbs xxymvpz x1dyh7pn']
+CHAT_INFO_SUBTITLE_XPATH = //span[@class='html-span xdj266r x11i5rnm xat24cr x1mh8g0r xexx8yu x4uap5 x18d9i69 xkhd6sd x1hl2dhg x16tdsg8 x1vvkbs x18jtxc7']
 
 MESSAGE_CONTAINER_XPATH = //div[@class='x78zum5 xdt5ytf x1iyjqo2 x2lah0s xl56j7k x121v3j4']/div/div[@class='x78zum5 xdt5ytf']
 MESSAGE_XPATH = .//div[@class='html-div xexx8yu x4uap5 x18d9i69 xkhd6sd x1gslohp x11i5rnm x12nagc x1mh8g0r x1yc453h x126k92a x18lvrbx']
